--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}{{ page.shortUrl }}</h1>
+<p>{{ page.date | date: "%b %-d, %Y" }}</p>
 <div class='separator'></div>
         
 {{ content }}
