--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<style type="text/css">
-    html {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: "Arial", sans-serif;
-    }
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 100%; /* optional: to make it responsive */
-      max-height: 600px;
-    }
-
-    body {margin: 0 20%}
-
-    @media (max-width: 600px) {
-        body {margin: 0}
-    }
-</style>
 <head>
     <meta charset='utf-8'>
     <title>
@@ -36,6 +15,7 @@
     <meta property="og:description" content="{{ page.description | default: site.description }}">
     <meta property="og:url" content="{{ page.url | absolute_url }}">
 
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/index.css" type="text/css">
     {% if site.highlighter %}
         <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
     {% endif %}
