--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,12 +5,11 @@
  */
 /* Body */
 html {
-  font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+/*  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;*/
+  font-family: Arial, sans-serif;
 }
 
 body {
-  font-size: 1.8rem;
   line-height: 1.618;
   max-width: 38em;
   margin: auto;
@@ -19,19 +18,8 @@ body {
   padding: 13px;
 }
 
-@media (max-width: 684px) {
-  body {
-    font-size: 1.53rem;
-  }
-}
-@media (max-width: 382px) {
-  body {
-    font-size: 1.35rem;
-  }
-}
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.1;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
   font-weight: 700;
   margin-top: 3rem;
   margin-bottom: 1.5rem;
@@ -41,37 +29,9 @@ h1, h2, h3, h4, h5, h6 {
   word-break: break-word;
 }
 
-h1 {
-  font-size: 2.35em;
-}
-
-h2 {
-  font-size: 2em;
-}
-
-h3 {
-  font-size: 1.75em;
-}
-
-h4 {
-  font-size: 1.5em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-h6 {
-  font-size: 1em;
-}
-
 p {
   margin-top: 0px;
   margin-bottom: 2.5rem;
-}
-
-small, sub, sup {
-  font-size: 75%;
 }
 
 hr {
@@ -93,7 +53,6 @@ a:hover {
 ul {
   padding-left: 1.4em;
   margin-top: 0px;
-  margin-bottom: 2.5rem;
 }
 
 li {
@@ -135,11 +94,9 @@ pre {
   overflow-x: auto;
   margin-top: 0px;
   margin-bottom: 2.5rem;
-  font-size: 0.9em;
 }
 
 code, kbd, samp {
-  font-size: 0.9em;
   padding: 0 0.5em;
   background-color: #f1f1f1;
   white-space: pre-wrap;
@@ -149,7 +106,6 @@ pre > code {
   padding: 0;
   background-color: transparent;
   white-space: pre;
-  font-size: 1em;
 }
 
 /* Tables */
@@ -185,7 +141,6 @@ textarea {
   white-space: nowrap;
   background-color: #1d7484;
   color: #f9f9f9;
-  border-radius: 1px;
   border: 1px solid #1d7484;
   cursor: pointer;
   box-sizing: border-box;
@@ -210,7 +165,6 @@ textarea, select, input {
   margin-bottom: 10px;
   background-color: #f1f1f1;
   border: 1px solid #f1f1f1;
-  border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
 }
