--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     <meta property="og:description" content="{{ page.description | default: site.description }}">
     <meta property="og:url" content="{{ page.url | absolute_url }}">
 
+    <meta property="og:image" content="{{ '/assets/favicon.ico' | default: site.image }}">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="icon" href="{{ '/assets/favicon.ico' | relative_url }}" type="image/x-icon">
     <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | relative_url }}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{ '/assets/favicon.png' | relative_url }}"> <!-- For Apple devices -->
@@ -48,6 +51,16 @@
       gtag('js', new Date());
 
       gtag('config', 'G-LR2601DRCQ');
+    </script>
+
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+      kofiWidgetOverlay.draw('teocos', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Tip',
+        'floating-chat.donateButton.background-color': '#003500',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
     </script>
 </body>
 </html>
